# psf

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  backup.sh  build.py  demo.sh  index.html  psf.py  pyproject.toml  resume.md  topf.py  topfig_template.html
docs/: review-brief.md
docs/superpowers/plans/: 2026-06-06-psf-grouping-lifecycle-paths.md  2026-06-06-psf.md  2026-06-07-topf-implementation.md  2026-06-07-topf-vmstat-and-interactivity.md  2026-06-07-topf-vmstat-history-coloring.md  2026-06-07-topfig-config-editor.md
docs/superpowers/specs/: 2026-06-06-psf-design.md  2026-06-06-psf-grouping-lifecycle-paths-design.md  2026-06-06-topf-windowed-cpu-design.md  2026-06-07-topf-vmstat-and-interactivity-design.md  2026-06-07-topf-vmstat-history-coloring-design.md  2026-06-07-topfig-config-editor-design.md
tests/: test_build.py  test_psf.py  test_topf.py
